[gd_scene load_steps=9 format=2]

[ext_resource path="res://Script/Pause.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Art/ButtonNormal.png" type="Texture" id=3]
[ext_resource path="res://Art/ButtonHover.png" type="Texture" id=4]
[ext_resource path="res://Art/ButtonPressed.png" type="Texture" id=5]
[ext_resource path="res://Audio/PauseSoundEffect.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.243137, 0.243137, 0.294118 )

[node name="ResumeButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.5
margin_top = -32.0
margin_right = 26.5
margin_bottom = -14.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="ResumeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -7.0
margin_right = 24.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
uppercase = true

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 20.0
margin_bottom = 7.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.5
margin_top = -7.0
margin_right = 16.5
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
uppercase = true

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
